; ModuleID = '/home/carl/AnghaBench/git/builtin/extr_rev-list.c_show_object.c'
source_filename = "/home/carl/AnghaBench/git/builtin/extr_rev-list.c_show_object.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.object = type { i32 }
%struct.rev_list_info = type { i32 }

@progress = common dso_local global i32 0, align 4
@progress_counter = common dso_local global i32 0, align 4
@REV_LIST_QUIET = common dso_local global i32 0, align 4
@arg_show_object_names = common dso_local global i64 0, align 8
@stdout = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [4 x i8] c"%s\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.object*, i8*, i8*)* @show_object to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @show_object(%struct.object* %0, i8* %1, i8* %2) #0 {
  %4 = alloca %struct.object*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca %struct.rev_list_info*, align 8
  store %struct.object* %0, %struct.object** %4, align 8
  store i8* %1, i8** %5, align 8
  store i8* %2, i8** %6, align 8
  %8 = load i8*, i8** %6, align 8
  %9 = bitcast i8* %8 to %struct.rev_list_info*
  store %struct.rev_list_info* %9, %struct.rev_list_info** %7, align 8
  %10 = load %struct.object*, %struct.object** %4, align 8
  %11 = load i8*, i8** %5, align 8
  %12 = load i8*, i8** %6, align 8
  %13 = call i64 @finish_object(%struct.object* %10, i8* %11, i8* %12)
  %14 = icmp ne i64 %13, 0
  br i1 %14, label %15, label %16

15:                                               ; preds = %3
  br label %41

16:                                               ; preds = %3
  %17 = load i32, i32* @progress, align 4
  %18 = load i32, i32* @progress_counter, align 4
  %19 = add nsw i32 %18, 1
  store i32 %19, i32* @progress_counter, align 4
  %20 = call i32 @display_progress(i32 %17, i32 %19)
  %21 = load %struct.rev_list_info*, %struct.rev_list_info** %7, align 8
  %22 = getelementptr inbounds %struct.rev_list_info, %struct.rev_list_info* %21, i32 0, i32 0
  %23 = load i32, i32* %22, align 4
  %24 = load i32, i32* @REV_LIST_QUIET, align 4
  %25 = and i32 %23, %24
  %26 = icmp ne i32 %25, 0
  br i1 %26, label %27, label %28

27:                                               ; preds = %16
  br label %41

28:                                               ; preds = %16
  %29 = load i64, i64* @arg_show_object_names, align 8
  %30 = icmp ne i64 %29, 0
  br i1 %30, label %31, label %36

31:                                               ; preds = %28
  %32 = load i32, i32* @stdout, align 4
  %33 = load %struct.object*, %struct.object** %4, align 8
  %34 = load i8*, i8** %5, align 8
  %35 = call i32 @show_object_with_name(i32 %32, %struct.object* %33, i8* %34)
  br label %41

36:                                               ; preds = %28
  %37 = load %struct.object*, %struct.object** %4, align 8
  %38 = getelementptr inbounds %struct.object, %struct.object* %37, i32 0, i32 0
  %39 = call i8* @oid_to_hex(i32* %38)
  %40 = call i32 @printf(i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str, i64 0, i64 0), i8* %39)
  br label %41

41:                                               ; preds = %15, %27, %36, %31
  ret void
}

declare dso_local i64 @finish_object(%struct.object*, i8*, i8*) #1

declare dso_local i32 @display_progress(i32, i32) #1

declare dso_local i32 @show_object_with_name(i32, %struct.object*, i8*) #1

declare dso_local i32 @printf(i8*, i8*) #1

declare dso_local i8* @oid_to_hex(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
